welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var rep=-1
  var last=nums.length -1
  for (i <- 0 to last){
    if (nums(i)==lookingFor){
      rep=i
    }
  } 
  return rep
}